Fix day bottom spacing

--- a/src/smart-mirror/src/Clock/Clock.css
+++ b/src/smart-mirror/src/Clock/Clock.css
@@ -8,6 +8,7 @@
     font-weight: lighter;
     font-size: 3rem;
     margin-top: -0.8rem;
+    margin-bottom: 1rem;
     text-align: left;
 }
 
